list fixing and button top spacing

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -248,7 +248,7 @@ ul.numbered-list {
   counter-reset: li;
   list-style-type: none;
   padding-inline-start: 0px;
-  margin-block-start: 6px;
+  margin-block-start: 8px;
   margin-block-end: 0px;
   margin-bottom: 24px;
   max-width: 24rem;
@@ -256,7 +256,7 @@ ul.numbered-list {
   
   li {
     position: relative;   
-    padding: 2px 0 2px 0px;
+    padding: 4px 0 4px 0px;
     
     &:before {
       content: counter(li);
@@ -271,7 +271,7 @@ ul.numbered-list {
       line-height: 12px;
       position: absolute;      
       left: -20px;
-      top: 4px;
+      top: 6px;
     }
   }
 }
